--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="icon" href="icons/icon-192.png">
 <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192.png">
 <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512.png">
+<!-- 画面幅固定＋ユーザズーム禁止） -->
+<meta name="viewport"
+  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+<!-- 電話番号の自動リンク無効化 -->
+<meta name="format-detection" content="telephone=no">
 <title>ガチャ結果ビューア v15</title>
 
 <!-- JSZip（保存で使用） -->
@@ -40,6 +45,19 @@
   h1,h2,h3{margin:0 0 .5rem}h1{font-size:1.7rem}h2{font-size:1.2rem}
   .container{max-width:1200px;margin:24px auto 64px;padding:0 16px}
 
+/* iOS の自動文字拡大を抑止 */
+html { -webkit-text-size-adjust: 100%; }
+
+/* クリック系要素でのダブルタップ拡大を抑止（対応ブラウザで有効） */
+button, a, [role="button"] {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* 入力フォーカス時の“勝手に拡大”回避（iOSは16px未満で拡大が発動）*/
+@media (hover: none) and (pointer: coarse) {
+  input, select, textarea { font-size: 16px; }
+}
   /* Buttons */
   .btn{
     display:inline-flex;align-items:center;justify-content:center;gap:.5rem;
@@ -211,21 +229,51 @@
   }
   .start-tile{
     position:relative; aspect-ratio:1/1;
-    border:1px solid var(--border); border-radius:16px;
-    background:linear-gradient(180deg,#1a1a22,#14141a);
-    box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    border:1px solid var(--accent); border-radius:16px;
+    background:linear-gradient(180deg,var(--accent),var(--accent-2));
+    color:#fff;
+    box-shadow: var(--shadow);
     display:flex; flex-direction:column; align-items:center; justify-content:center;
-    gap:6px; cursor:pointer;
+    gap:6px; cursor:pointer; transition:filter .15s, transform .05s;
   }
   .start-tile .title{ font-weight:800; font-size:1.05rem; color:#fff; }
-  .start-tile .sub{ font-size:.85rem; color:#cbd5e1; text-align:center; line-height:1.3 }
+  .start-tile .sub{ font-size:.85rem; color:#ffe6ec; text-align:center; line-height:1.3 }
   .start-tile .info{
     position:absolute; top:8px; right:8px; width:22px; height:22px;
-    border-radius:999px; background:#2a2a36; color:#cbd5e1;
+    border-radius:999px; background:rgba(0,0,0,.28); color:#fff;
     display:flex; align-items:center; justify-content:center; font-weight:800;
-    border:1px solid var(--border);
+    border:1px solid rgba(255,255,255,.25);
   }
-  .start-tile:hover{ outline:1px solid var(--accent); }
+  .start-tile:hover{ filter:brightness(1.06); transform:translateY(1px); outline:none; }
+
+    /* PWA（standalone）かつモバイル相当のときだけ適用 */
+  @media (display-mode: standalone) and (hover: none) and (pointer: coarse) {
+    html, body, #app-root {
+      height: 100dvh;              /* 動的ビューポート（iOS/Androidでアドレスバーを考慮） */
+      min-height: 100dvh;
+      margin: 0;
+    }
+
+    body {
+      overflow: hidden;            /* 画面全体のスクロールを止める（内部スクロールに委譲） */
+      background: #000;
+      -webkit-text-size-adjust: 100%; /* iOSの自動文字拡大を抑止 */
+      overscroll-behavior: none;   /* Androidの引っ張り更新/バウンス抑制（iOSは効果弱） */
+    }
+
+    /* 内部スクロール領域（必要な画面だけに付ける） */
+    .scroll-area {
+      height: 100%;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch; /* iOSで慣性スクロール */
+      overscroll-behavior: contain;      /* ネスト先へバウンス伝播させない */
+      scrollbar-width: none;             /* Firefox: スクロールバー非表示 */
+      padding-bottom: env(safe-area-inset-bottom);
+      padding-left:   env(safe-area-inset-left);
+      padding-right:  env(safe-area-inset-right);
+    }
+    .scroll-area::-webkit-scrollbar { display: none; } /* WebKit系: スクロールバー非表示 */
+  }
 </style>
 </head>
 <body>
@@ -348,6 +396,11 @@
       <!-- 隠しファイル入力（JSON / TXT） -->
       <input type="file" id="jsonFile2" accept="application/json,.json" class="visually-hidden" />
       <input type="file" id="txtFileInput" accept=".txt,text/plain" class="visually-hidden" /> 
+
+      <!-- 閉じるボタン -->
+      <div class="row" style="justify-content:flex-end;gap:8px;margin-top:12px">
+        <button class="btn ghost" id="closeStart">閉じる</button>
+      </div>
     </div>
   </div>
 
@@ -1538,6 +1591,44 @@ async function importFromExternalState(state){
     alert("取り込みに失敗しました: " + (err?.message || err));
   }
 }
+/* --- PWA(standalone) × モバイル端末のみで、ズーム挙動を抑止 --- */
+(function () {
+  // “モバイル相当”かつ PWA(standalone) 判定
+  const isMobile =
+    window.matchMedia('(max-width: 900px), (hover: none) and (pointer: coarse)').matches;
+  const isStandalone =
+    window.matchMedia('(display-mode: standalone)').matches || // PWA（多くのブラウザ）
+    (typeof navigator.standalone === 'boolean' && navigator.standalone === true); // iOS Safari
+
+  if (!isMobile || !isStandalone) return;
+
+  // 入力系はズーム抑止の対象外
+  const isInteractive = (el) =>
+    !!el.closest('input, textarea, select, button, [role="button"], [contenteditable="true"], .allow-zoom');
+
+  // ダブルタップズーム抑止
+  let lastTouchEnd = 0;
+  document.addEventListener(
+    'touchend',
+    (e) => {
+      if (isInteractive(e.target)) return;
+      const now = Date.now();
+      if (now - lastTouchEnd <= 300) e.preventDefault();
+      lastTouchEnd = now;
+    },
+    { passive: false }
+  );
+
+  // ピンチズーム抑止（2本指開始をキャンセル）
+  document.addEventListener(
+    'touchstart',
+    (e) => {
+      if (isInteractive(e.target)) return;
+      if (e.touches.length > 1) e.preventDefault();
+    },
+    { passive: false }
+  );
+})();
 
 </script>
 </body>
