--- a/index.html
+++ b/index.html
@@ -248,47 +248,14 @@ button, a, [role="button"] {
 
     /* PWA（standalone）かつモバイル相当のときだけ適用 */
   @media (display-mode: standalone) and (hover: none) and (pointer: coarse) {
-    html, body, #app-root {
-      height: 100dvh;              /* 動的ビューポート（iOS/Androidでアドレスバーを考慮） */
-      min-height: 100dvh;
-      margin: 0;
-    }
 
     html, body { overscroll-behavior: none; }
 
     body {
-      overflow: hidden;            /* 画面全体のスクロールを止める（内部スクロールに委譲） */
       background: #000;
       -webkit-text-size-adjust: 100%; /* iOSの自動文字拡大を抑止 */
       overscroll-behavior: none;   /* Androidの引っ張り更新/バウンス抑制（iOSは効果弱） */
     }
-
-    /* 内部スクロール領域（必要な画面だけに付ける） */
-    .scroll-area {
-      height: 100%;
-      overflow: auto;
-      -webkit-overflow-scrolling: touch; /* iOSで慣性スクロール */
-      overscroll-behavior: contain;      /* ネスト先へバウンス伝播させない */
-      scrollbar-width: none;             /* Firefox: スクロールバー非表示 */
-      padding-bottom: env(safe-area-inset-bottom);
-      padding-left:   env(safe-area-inset-left);
-      padding-right:  env(safe-area-inset-right);
-    }
-
-    .scroll-area::-webkit-scrollbar { display: none; } /* WebKit系: スクロールバー非表示 */
-    .container { 
-      min-height: 100dvh; 
-      display: flex; 
-      flex-direction: column; 
-    }
-    #mainUI.scroll-area {
-      flex: 1 1 auto;                 /* 余白を全部受け持つ */
-      overflow: auto;                  /* 内部スクロール */
-      -webkit-overflow-scrolling: touch;
-      /* ボトムタブ分の余白（mobile-viewsのpadding-bottomと整合） */
-      padding-bottom: env(safe-area-inset-bottom);
-    }
-
   }
 
   .image-actions .btn{ flex:1 1 0; }
@@ -317,7 +284,7 @@ button, a, [role="button"] {
     </section>
 
     <!-- Main UI (hidden until start/loaded) -->
-    <section id="mainUI" class="scroll-area" style="display:none">
+    <section id="mainUI" style="display:none">
       <section class="toolbar" id="controlsPage" data-page="controls">
         <div class="row file-drop" id="dropzone mainControls">
         <div class="tag" id="summaryTag">未読込</div>
@@ -1660,7 +1627,6 @@ async function importFromExternalState(state){
   // 入力系はズーム抑止の対象外
   const isInteractive = (el) =>
     !!el.closest('input, textarea, select, button, [role="button"], [contenteditable="true"], .allow-zoom .tab');
-  const allowSel = '.scroll-area, input, .tab, textarea, select, [contenteditable="true"]';
 
   // ダブルタップズーム抑止
   let lastTouchEnd = 0;
@@ -1684,22 +1650,6 @@ async function importFromExternalState(state){
     },
     { passive: false }
   );
-    // bodyロックを強制（iOSが解除しても都度復帰）
-  const lock = () => {
-    document.documentElement.style.overscrollBehavior = 'none';
-    document.body.style.overflow = 'hidden';
-    document.body.style.overscrollBehavior = 'none';
-  };
-  ['focusin','focusout','orientationchange','visibilitychange'].forEach(ev=>{
-    window.addEventListener(ev, lock, {passive:true});
-  });
-  lock();
-
-  // .scroll-area 以外でのドラッグをキャンセル（バウンス対策）
-  document.addEventListener('touchmove', (e)=>{
-    if (e.target.closest(allowSel)) return;
-    e.preventDefault();
-  }, {passive:false});
 })();
 
 </script>
